2004-02-27  Jani Monoses <jani@iv.ro>

	* src/net/http_client.c: Close connection with abort instead of
	friendly close since for ELF files we don't read the whole content
	but end the connection when the runnable parts are in. The server
	interprets close as it has nothing more to receive, but it still wants
	to send the rest of the file and does that until it times out.
	
2004-02-26  Jani Monoses <jani@iv.ro>

	* src/load.c:
	* src/net/http_client.c: Allow overriding the default HTTP port.

2004-02-25  Gratian Crisan <nelu@iv.ro>

	* src/xyzModem.c: Do not read an information header for XModem 
	in xyzModem_stream_open(). XModem does not have a file information
	header and this caused in the previous implementation a retransmission
	of the first data block (it was read and ignored in the open function).

2004-02-24  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: net_io needs to be in libextras to enable network
	support (failed if network debug was disabled)

2004-02-23  Uwe Kindler  <uwe_kindler@web.de>

	* src/cksum.c:
	* src/dump.c:
	* src/fconfig.c:
	* src/flash.c:
	* src/load.c:
	* src/main.c:
	* src/mcmp.c:
	* src/mcopy.c:
	* src/mfill.c:
	* src/net/net_io.c:
	* src/net/ping.c: Minor cleanups to remove warnings.

2004-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/redboot.sgml: Document lowering security level for TFTP to
	work on more recent Red Hat Linux.

2004-02-19  Jani Monoses <jani@iv.ro>

	* src/xyzModem.c: Start with sending a 'C', do not wait until the
	first packet from the sender.This allows download to start quicker.
	
2004-02-16  Andrew Dyer  <adyer@righthandtech.com>

	* src/main.c: add 'go' options to help string

2004-02-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/redboot.cdl: Bring CYGNUM_REDBOOT_LOAD_ZLIB_BUFFER under
	CYGBLD_BUILD_REDBOOT_WITH_ZLIB. Add CYGPRI_REDBOOT_ZLIB_FLASH to
	control whether decompression can be used with flash images.
	* src/flash.c: Use CYGPRI_REDBOOT_ZLIB_FLASH instead of