@@ -1,3 +1,9 @@
+2004-03-02  Andrew Dyer  <adyer@righthandtech.com>
+
+	* src/load.c: add -p option to help string and only print it and -h if
+	CYGPKG_REDBOOT_NETWORKING is enabled.  Add a CR to the end of the 
+	SHORT_DATA message string
+
 2004-02-27  Jani Monoses <jani@iv.ro>
 
 	* src/net/http_client.c: Close connection with abort instead of
